# GraphChainer

./: CMakeLists.txt  CondaEnvironment.yml  LICENSE.md  README.md  main.cpp  makefile
CLC/: Graph.hpp  Makefile  Serializer.hpp  anchor.hpp  brute.cpp  gen.cpp  loader.hpp  main.cpp  run_all_tests.py  simple.cpp
CLC/mpc/: mpc.cpp  mpc.h
Snakemakes/ErrorCorrect/: README.md  Snakefile  config.yaml
includes/mpc/: mpc.h
scripts/: summary.py  test.sh
scripts/10fold_test/: gen_test.py  sos.py
src/: Aligner.cpp  Aligner.h  AlignerMain.cpp  AlignmentCorrectnessEstimation.cpp  AlignmentCorrectnessEstimation.h  AlignmentGraph.cpp  AlignmentGraph.h  AlignmentSelection.cpp  AlignmentSelection.h  AlignmentSubsequenceIdentity.cpp  ArrayPriorityQueue.h  BruteForceExactPrefixSeeds.cpp  CMakeLists.txt  CommonUtils.cpp  CommonUtils.h  ComponentPriorityQueue.h  DijkstraQueue.h  EValue.cpp  EValue.h  EstimateRepeatCount.cpp  ExtractCorrectedReads.cpp  ExtractExactPathSubgraph.cpp  ExtractPathSequence.cpp  ExtractPathSubgraphNeighbourhood.cpp  FusionFinder.cpp  GfaGraph.cpp  GfaGraph.h  GraphAligner.h  GraphAlignerBitvectorBanded.h  GraphAlignerBitvectorCommon.h  GraphAlignerBitvectorDijkstra.h  GraphAlignerCommon.h  GraphAlignerGAFAlignment.h  GraphAlignerVGAlignment.h  GraphAlignerWrapper.cpp  GraphAlignerWrapper.h  MafToAlignment.cpp  Makefile  MinimizerSeeder.cpp  MinimizerSeeder.h  (+36 more)
src/mpc/: CMakeLists.txt  mpc.cpp
